--- a/DC_Blog/index.html
+++ b/DC_Blog/index.html
@@ -1,58 +1,67 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css" type="text/css" /> 
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-  <header> 
-  <div><img src="img/logo.png"/> DigitalCraftsBlog</div> 
-  <ul class="menu">
-      <li>
-          <a href="">All Posts</a>
-      </li>
-      <li>
-          <a href="">About</a>
-      </li>
-      <li>
-          <a href="">Follow</a>
-      </li>
+    <header>
+        <div><img src="img/logo.png" /> DigitalCraftsBlog</div>
+        <ul class="top menu">
+            <li>
+                <a href="">All Posts</a>
+            </li>
+            <li>
+                <a href="">About</a>
+            </li>
+            <li>
+                <a href="">Follow</a>
+            </li>
 
 
 
-  </ul>
-  
-</header> 
-   <h1><b>Fake it 'til you Make it: A Developer's Story</b>
+        </ul>
 
-   </h1>
-  <h6>October 6th, 2018</h6>
-  <h4>Follow @DigitalCrafts</h4>
-  <main>
-     Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis vitae esse asperiores aperiam ipsam consequuntur, sequi harum quam minus explicabo, minima, expedita maiores autem assumenda odio dolorem obcaecati cum voluptates!
+    </header>
 
-  </main>
+    <h1><b>Fake it 'til you Make it: A Developer's Story</b>
+
+    </h1>
+    <h6>October 6th, 2018</h6>
+    <button>Follow @DigitalCrafts</button>
+    <main>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Commodi et fugit delectus saepe adipisci labore natus
+        officia praesentium animi. Maxime molestias eum architecto sint laudantium sit est, quo dicta. Nemo!
+
+
+
+
+
+
+    </main>
 </body>
+<hr>
 <ul class="menu">
-  <li>
-      <a href="">Subscribe</a>
-  </li>
-  <li>
-      <a href="">Previous</a>
-  </li>
-  <li>
-      <a href="">Next</a>
-  </li>
+    <li>
+        <a href="">Subscribe</a>
+    </li>
+    <li>
+        <a href="">Previous</a>
+    </li>
+    <li>
+        <a href="">Next</a>
+    </li>
 
 
 
 
 </ul>
 
-<footer>2018 DigitalCrafts</footer>
+<footer>&#169; 2018 DigitalCrafts</footer>
+
 </html>
-
-
